--- a/next/src/components/ui/Button/Button.module.scss
+++ b/next/src/components/ui/Button/Button.module.scss
@@ -5,6 +5,10 @@
   display: inline-block;
   cursor: pointer;
 
+  &:disabled {
+    cursor: not-allowed;
+  }
+
   &::before,
   &::after {
     content: '';
