--- a/next/src/components/global/AboutCourseLeader/AboutCourseLeader.module.scss
+++ b/next/src/components/global/AboutCourseLeader/AboutCourseLeader.module.scss
@@ -33,21 +33,18 @@
 .box {
   display: flex;
   flex-direction: column;
-  gap: 14px;
+  gap: 24px;
 
   header {
     flex: 1;
 
-    h1, h2 {
+    h1,
+    h2 {
       margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
-    }
-
-    p {
-      margin-bottom: 36px;
     }
   }
 
-  div {
+  > div {
     position: relative;
     z-index: -3;
     border-bottom: var(--sectionBorder);
@@ -88,4 +85,8 @@
       margin-bottom: 0;
     }
   }
+}
+
+.paragraph {
+  margin-bottom: 36px;
 }
