--- a/next/src/components/ui/Button/Button.module.scss
+++ b/next/src/components/ui/Button/Button.module.scss
@@ -1,318 +1,49 @@
-.btn {
-  position: relative;
-  width: 242px;
-  height: 44px;
-  display: inline-block;
-  cursor: pointer;
-
-  &:disabled {
-    cursor: not-allowed;
-  }
-
-  &::before,
-  &::after {
-    content: '';
-    position: absolute;
-    top: -1px;
-    left: -1px;
-    right: -1px;
-    bottom: -1px;
-    z-index: -1;
-    opacity: 0;
-    transition: opacity 0.2s;
-  }
-
-  &::after {
-    background: var(--primary-600);
-    opacity: 1;
-    z-index: -2;
-  }
-
-  &::before {
-    background: radial-gradient(circle at bottom center, rgba(195, 230, 255, 1) 5%, rgba(0, 135, 227, 0))
-      var(--secondary-500);
-    opacity: 0;
-    z-index: -1;
-  }
-
-  &:hover {
-    &::before {
-      opacity: 1;
-    }
-  }
-
-  &:focus {
-    &::after {
-      opacity: 0;
-    }
-
-    &::before {
-      opacity: 1;
-      background: radial-gradient(circle at bottom center, rgba(195, 230, 255, 1) 25%, rgba(0, 135, 227, 0))
-        var(--secondary-500);
-    }
-  }
-
-  &:focus-visible {
-    &::after {
-      opacity: 1;
-    }
-
-    &::before {
-      opacity: 0;
-    }
-  }
-
-  & > span:first-child {
-    position: relative;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    background: var(--primary-900, #000);
-    padding: 12px 16px;
-    display: flex;
-    align-items: center;
-    text-transform: uppercase;
-    letter-spacing: calc(0.16rem / 16);
-    font-size: calc(16rem / 16);
+.button {
+  border: 1px solid var(--secondary-500, #1e87c1);
+  text-transform: uppercase;
+  padding: 10px 16px;
+  display: inline-flex;
+  justify-content: center;
+  width: fit-content;
+  min-width: 242px;
+  &[data-theme='secondary'] {
     justify-content: center;
-  }
-
-  &[data-primary='true'] {
-    & > span:first-child {
-      justify-content: space-between;
-
-      svg {
-        stroke: var(--secondary-100);
-        transition: stroke 0.2s;
-      }
-
-      &::before,
-      &::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        transition: opacity 0.2s;
-      }
-
-      &::after {
-        opacity: 0;
-        z-index: -1;
-        background: radial-gradient(circle at bottom center, rgba(47, 129, 219, 0.2) 1%, rgba(0, 0, 0, 0.2));
-        background-color: var(--primary-900);
-      }
-
-      &::before {
-        z-index: -3;
-        background: radial-gradient(circle at bottom center, rgba(167, 180, 188, 0.1) 1%, rgba(10, 51, 79, 0));
-        background-color: var(--primary-900);
-      }
-    }
-
-    &::after {
-      background: radial-gradient(circle at bottom center, rgba(26, 159, 255, 1) 5%, rgba(93, 187, 255, 0));
-      background-color: var(--secondary-500);
-      opacity: 1;
-      z-index: 0;
-    }
+    position: relative;
+    border-color: var(--primary-600, #434e5b);
 
     &::before {
-      background: radial-gradient(rgba(115, 196, 255, 1), 25%, rgba(0, 98, 165, 0)), var(--secondary-300);
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      opacity: 0;
+      transition: opacity 0.2s var(--easing);
+      pointer-events: none;
+      border: 1px solid transparent;
+      border-image: radial-gradient(circle at bottom center, #c3e6ff, var(--secondary-500, #1e87c1)) 1;
     }
 
     &:hover {
       &::before {
         opacity: 1;
       }
-      & > span:first-child {
-        &::after {
-          opacity: 1;
-        }
-
-        svg {
-          stroke: var(--secondary-300);
-        }
-      }
-
-      .bulletIcon {
-        &__1 {
-          opacity: 0.88;
-        }
-        &__2 {
-          opacity: 0.5;
-        }
-        &__3 {
-          opacity: 0.45;
-        }
-        &__4 {
-          opacity: 0.5;
-        }
-        &__5 {
-          opacity: 0.45;
-        }
-        &__6 {
-          opacity: 0.45;
-        }
-        &__7 {
-          opacity: 0.5;
-        }
-        &__8 {
-          opacity: 0.7;
-        }
-      }
     }
 
     &:focus {
-      & > span:first-child {
-        svg {
-          stroke: var(--secondary-500);
-        }
-      }
-
       &::before {
-        background: radial-gradient(rgba(115, 196, 255, 1) 25%, rgba(0, 98, 165, 0)), var(--secondary-500);
-        z-index: 0;
-      }
-    }
-
-    &:focus-visible {
-      & > span:first-child {
-        svg {
-          stroke: var(--secondary-100);
-        }
+        border-image: radial-gradient(circle at bottom center, #c3e6ff, var(--secondary-300, #69a5c6)) 1;
       }
     }
   }
-}
 
-.glow {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: 1px -1px -1px -1px;
-  z-index: 10;
-  border: 1px solid var(--primary-700, #262c33);
-  filter: blur(3px);
-}
+  &[data-theme='primary'] {
+    justify-content: space-between;
 
-.bullets {
-  position: absolute;
-  width: 92px;
-  height: 43px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-}
-
-.bulletIcon {
-  position: absolute;
-  fill: rgb(255, 255, 255);
-  opacity: 1;
-  opacity: 0.88;
-  transition: opacity 0.2s;
-  &__1 {
-    left: 35.46px;
-    bottom: 6px;
-    opacity: 0.68;
-  }
-
-  &__2 {
-    right: 38.54px;
-    bottom: 13px;
-    opacity: 0.3;
-  }
-
-  &__3 {
-    left: 11.46px;
-    bottom: 7px;
-    opacity: 0.25;
-  }
-
-  &__4 {
-    right: 21.392px;
-    bottom: -4.223px;
-    opacity: 0.3;
-  }
-
-  &__5 {
-    right: 36.54px;
-    bottom: -15px;
-    opacity: 0.25;
-  }
-
-  &__6 {
-    right: 13.54px;
-    bottom: 7px;
-    opacity: 0.25;
-  }
-
-  &__7 {
-    left: 21.585px;
-    bottom: -6.554px;
-    opacity: 0.3;
-  }
-
-  &__8 {
-    left: 45px;
-    bottom: -7.042px;
-    opacity: 0.5;
+    background: radial-gradient(circle at bottom center, rgba(167, 180, 188, 0.1) 1%, rgba(10, 51, 79, 0));
+    background-color: var(--primary-900);
   }
 }
 
-.loader {
-  width: 26px;
-  height: 26px;
-  border-radius: 50%;
-  position: relative;
-  animation:
-    rotate 1s linear infinite,
-    fadeIn 0.3s;
-}
-.loader::before {
-  content: '';
-  box-sizing: border-box;
-  position: absolute;
-  inset: 0px;
-  border-radius: 50%;
-  border: 2px solid var(--primary-300);
-  animation: prixClipFix 2s linear infinite;
-}
-
-@keyframes rotate {
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-@keyframes prixClipFix {
-  0% {
-    clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
-  }
-  25% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
-  }
-  50% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
-  }
-  75% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
-  }
-  100% {
-    clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
-  }
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
+// Finish on live coding ------------------
