--- a/next/src/components/ui/Loader/Loader.module.scss
+++ b/next/src/components/ui/Loader/Loader.module.scss
@@ -1,4 +1,4 @@
-.state {
+.container {
   position: absolute;
   top: 0;
   left: 0;
@@ -8,26 +8,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
-  gap: 16px;
   background-color: rgba(#000000, 0.9);
-  text-align: center;
   padding: clamp(16px, calc(28vw / 7.68), 32px);
-  animation: fadeIn 0.3s var(--easing);
-
-  h3,
-  p,
-  button {
-    animation: fadeLeft 0.3s var(--easing);
-  }
-
-  h3 {
-    font-size: clamp(18px, calc(22vw / 7.68), 22px);
-  }
-
-  button {
-    margin-top: clamp(16px, calc(24vw / 7.68), 24px);
-  }
+  animation: fadeIn 0.2s var(--easing);
 }
 
 @keyframes fadeIn {
@@ -36,17 +19,6 @@
   }
   to {
     opacity: 1;
-  }
-}
-
-@keyframes fadeLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-6px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0px);
   }
 }
 
