feat: update Markdown to feature single p element when tag is not specified and is single line

--- a/next/src/components/global/AdvantagesCta/AdvantagesCta.module.scss
+++ b/next/src/components/global/AdvantagesCta/AdvantagesCta.module.scss
@@ -21,7 +21,8 @@
   img {
     width: clamp(371px, calc(371vw / 10), 483px);
   }
-  > div > div > p:first-of-type {
+
+  .paragraph {
     margin-bottom: clamp(48px, calc(64vw / 7.68), 80px);
     max-width: 587px;
   }
