--- a/next/src/components/global/CtaImage/CtaImage.module.scss
+++ b/next/src/components/global/CtaImage/CtaImage.module.scss
@@ -43,7 +43,7 @@
       margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
     }
 
-    > p:first-of-type {
+    .paragraph {
       margin-bottom: 36px;
     }
   }
