--- a/next/src/components/global/NotFound/NotFound.module.scss
+++ b/next/src/components/global/NotFound/NotFound.module.scss
@@ -27,7 +27,7 @@
       margin-bottom: clamp(12px, calc(16vw / 7.68), 16px);
     }
 
-    p {
+    .paragraph {
       margin-bottom: clamp(36px, calc(48vw / 7.68), 80px);
     }
 
