--- a/next/src/components/ui/FormState/FormState.module.scss
+++ b/next/src/components/ui/FormState/FormState.module.scss
@@ -14,6 +14,7 @@
   text-align: center;
   padding: clamp(16px, calc(28vw / 7.68), 32px);
   animation: fadeIn 0.3s var(--easing);
+  margin: 0 !important;
 
   h3,
   p,
