--- a/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
+++ b/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
@@ -1,6 +1,100 @@
+.container {
+  position: relative;
+  overflow: hidden;
+
+  &:focus-within {
+    outline: 1px solid var(--primary-300);
+    outline-offset: 5px;
+  }
+
+  &[data-loading='true'] {
+    .open > img {
+      transform: scale(1.05);
+    }
+  }
+
+  video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 30;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+  }
+
+  .loader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 50;
+    width: 110%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: scale(1.05);
+
+    div {
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      position: relative;
+      animation:
+        rotate 1s linear infinite,
+        fadeIn 0.3s;
+    }
+    div::before {
+      content: '';
+      box-sizing: border-box;
+      position: absolute;
+      inset: 0px;
+      border-radius: 50%;
+      border: 3px solid var(--primary-300);
+      animation: prixClipFix 2s linear infinite;
+    }
+
+    @keyframes rotate {
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes prixClipFix {
+      0% {
+        clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+      }
+      25% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+      }
+      50% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%);
+      }
+      75% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
+      }
+      100% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
+      }
+    }
+
+    @keyframes fadeIn {
+      0% {
+        opacity: 0;
+      }
+      100% {
+        opacity: 1;
+      }
+    }
+  }
+}
+
 .open {
   position: relative;
   overflow: hidden;
+  transform: transform 0.3s var(--easing);
 
   & > div {
     position: absolute;
@@ -27,14 +121,4 @@
       transform: scale(1.05);
     }
   }
-}
-
-.video {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 800px;
-  aspect-ratio: 16/9;
-  z-index: 20;
 }
