feat: small updates

--- a/next/src/components/ui/CtaButtonRow/CtaButtonRow.module.scss
+++ b/next/src/components/ui/CtaButtonRow/CtaButtonRow.module.scss
@@ -12,7 +12,7 @@
     & > button {
       width: 100%;
 
-      & > span:first-child {
+      &[data-theme='secondary'] {
         justify-content: flex-start;
       }
     }
