--- a/next/src/components/global/ParticipantCarousel/ParticipantCarousel.module.scss
+++ b/next/src/components/global/ParticipantCarousel/ParticipantCarousel.module.scss
@@ -15,10 +15,11 @@
   overflow: hidden;
   margin: 0 auto;
   max-width: calc(1206px + var(--pageMargin) * 3);
+  padding-top: clamp(48px, calc(64vw / 7.68), 80px);
   @media (max-width: 1479px) {
     max-width: none;
     margin: 0 calc(var(--pageMargin) * -1);
-    padding: 0 var(--pageMargin) 0 calc(var(--pageMargin) * 2);
+    padding: clamp(48px, calc(64vw / 7.68), 80px) var(--pageMargin) 0 calc(var(--pageMargin) * 2);
   }
 }
 
@@ -56,7 +57,6 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  margin-bottom: clamp(48px, calc(64vw / 7.68), 80px);
   column-gap: 64px;
   row-gap: 32px;
   flex-wrap: wrap;
