--- a/next/src/components/ui/Button/Button.module.scss
+++ b/next/src/components/ui/Button/Button.module.scss
@@ -14,10 +14,10 @@
     &::before {
       content: '';
       position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+      top: -1px;
+      left: -1px;
+      right: -1px;
+      bottom: -1px;
       opacity: 0;
       transition: opacity 0.2s var(--easing);
       pointer-events: none;
