--- a/next/src/components/ui/Button/Button.module.scss
+++ b/next/src/components/ui/Button/Button.module.scss
@@ -5,45 +5,114 @@
   display: inline-flex;
   justify-content: center;
   width: fit-content;
+  align-items: center;
   min-width: 242px;
-  &[data-theme='secondary'] {
-    justify-content: center;
-    position: relative;
-    border-color: var(--primary-600, #434e5b);
-
+  position: relative;
+  &[data-theme='primary'] {
+    justify-content: space-between;
+    background: radial-gradient(39% 100% at 50% 100%, rgba(112, 123, 135, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+      var(--primary-900, #000);
     &::before {
-      content: '';
+      filter: blur(2px);
+    }
+    svg {
+      transition:
+        transform 0.2s var(--easing),
+        stroke 0.2s var(--easing);
+    }
+
+    .dots {
       position: absolute;
-      top: -1px;
-      left: -1px;
-      right: -1px;
-      bottom: -1px;
-      opacity: 0;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      opacity: 0.62;
       transition: opacity 0.2s var(--easing);
-      pointer-events: none;
-      border: 1px solid transparent;
-      border-image: radial-gradient(circle at bottom center, #c3e6ff, var(--secondary-500, #1e87c1)) 1;
+      div {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        background-color: #fff;
+        border-radius: 50%;
+        z-index: 2;
+        &:nth-of-type(1) {
+          bottom: -3.5px;
+          left: 43%;
+        }
+        &:nth-of-type(2) {
+          bottom: 8px;
+          left: 39%;
+        }
+        &:nth-of-type(3) {
+          bottom: 7px;
+          left: 49%;
+        }
+        &:nth-of-type(4) {
+          bottom: 14px;
+          left: 49.4%;
+        }
+        &:nth-of-type(5) {
+          bottom: -5px;
+          left: 53%;
+        }
+        &:nth-of-type(6) {
+          bottom: -2.2px;
+          left: 56.4%;
+        }
+        &:nth-of-type(7) {
+          bottom: 8px;
+          left: 60%;
+        }
+        &:nth-of-type(8) {
+          bottom: 3px;
+          left: 65%;
+        }
+        transform: translateY(5px);
+        transition: transform 0.2s var(--easing);
+      }
     }
 
     &:hover {
-      &::before {
+      background: radial-gradient(39% 100% at 50% 100%, rgba(47, 129, 219, 0.2) 0%, rgba(0, 0, 0, 0.2) 100%),
+        var(--primary-900, #000);
+      &::after {
         opacity: 1;
       }
-    }
-
-    &:focus {
-      &::before {
-        border-image: radial-gradient(circle at bottom center, #c3e6ff, var(--secondary-300, #69a5c6)) 1;
+      svg {
+        stroke: var(--secondary-300, #69a5c6);
+        transform: translateX(3px);
+      }
+      .dots {
+        opacity: 1;
+        div {
+          opacity: 1;
+          transform: translateY(0px);
+        }
       }
     }
   }
+  &[data-theme='secondary'] {
+    justify-content: center;
+    border-color: var(--primary-600, #434e5b);
+  }
 
-  &[data-theme='primary'] {
-    justify-content: space-between;
-
-    background: radial-gradient(circle at bottom center, rgba(167, 180, 188, 0.1) 1%, rgba(10, 51, 79, 0));
-    background-color: var(--primary-900);
+  &::before {
+    content: '';
+    position: absolute;
+    left: -1px;
+    top: -1px;
+    right: -1px;
+    bottom: -1px;
+    border: 1px solid;
+    border-image: radial-gradient(circle at bottom center, #c3e6ff, var(--secondary-500, #1e87c1)) 1;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s;
+  }
+  &:hover {
+    &::before {
+      opacity: 1;
+    }
   }
 }
-
-// Finish on live coding ------------------
