--- a/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
+++ b/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
@@ -109,6 +109,7 @@
     width: 44px;
     height: 44px;
     transition: background-color 0.2s;
+    z-index: 50;
 
     &:hover {
       background-color: rgba(0, 0, 0, 0.9);
