--- a/next/src/components/global/Partners/Partners.module.scss
+++ b/next/src/components/global/Partners/Partners.module.scss
@@ -60,23 +60,26 @@
         position: relative;
         height: 100%;
         width: 100%;
+
         padding: 12px 0;
+
+        img,
+        svg {
+          width: auto;
+          max-width: 70%;
+          height: clamp(48px, calc(110vw / 7.68), 156px);
+          transition: filter 0.2s var(--easing);
+          filter: grayscale(100%) brightness(50%) contrast(0.5);
+          opacity: 0.8;
+          object-fit: contain;
+        }
 
         &:hover,
         &:focus-visible {
           img {
-            filter: none;
+            filter: grayscale(100%) brightness(250%) contrast(0.5);
           }
         }
-      }
-      img {
-        width: auto;
-        max-width: 80%;
-        height: clamp(48px, calc(110vw / 7.68), 156px);
-        transition: filter 0.2s var(--easing);
-        filter: grayscale(100%) brightness(50%) contrast(0.5);
-        opacity: 0.8;
-        object-fit: contain;
       }
     }
   }
