--- a/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
+++ b/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
@@ -42,8 +42,7 @@
     z-index: -20;
   }
 
-  img,
-  video {
+  img {
     position: absolute;
     top: 0;
     left: 0;
@@ -59,9 +58,41 @@
   img {
     object-position: top;
   }
+}
 
-  video {
-    object-fit: cover;
+.video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: -25;
+
+  iframe {
+    width: 100vw;
+    height: 56.25vw;
+    min-height: 100vh;
+    min-width: 177.77vh;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  @media (max-width: 1023px) {
+    height: clamp(183px, calc(391vw / 7.68), 791px);
+
+    iframe {
+      min-width: calc(100% + 80px);
+    }
+  }
+
+  @media (max-width: 400px) {
+    iframe {
+      min-width: calc(100% + 120px);
+    }
   }
 }
 
