--- a/next/src/components/global/Reviews/Reviews.module.scss
+++ b/next/src/components/global/Reviews/Reviews.module.scss
@@ -108,23 +108,7 @@
   margin-bottom: 32px;
   padding: clamp(32px, calc(32vw / 7.68), 42px);
   border: 1px solid #3c454f;
-
-  img {
-    width: 100%;
-    height: 252px;
-  }
-
-  @media (max-width: 1259px) {
-    img {
-      height: clamp(194px, calc(194vw / 7.68), 252px);
-    }
-  }
-
-  @media (max-width: 759px) {
-    img {
-      height: clamp(237px, calc(502vw / 7.68), 362px);
-    }
-  }
+  height: auto;
 }
 
 .buttons {
