--- a/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
+++ b/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
@@ -1,8 +1,8 @@
 .container {
   position: relative;
   overflow: hidden;
-  max-width: max-content;
-
+  aspect-ratio: 9/16;
+  width: 100%;
   &:focus-within {
     outline: 1px solid var(--primary-300);
     outline-offset: 5px;
@@ -14,29 +14,44 @@
     }
   }
 
-  video {
+  .video {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 30;
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
+    aspect-ratio: 9/16;
+
+    iframe {
+      width: 100%;
+      height: 177.8%; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
+      min-height: 100%;
+      min-width: 56.25%; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 20;
+      pointer-events: none;
+    }
   }
 
   .loader {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 50;
-    width: 110%;
+    width: 120%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
     transform: scale(1.05);
+    z-index: 10;
 
     div {
       width: 36px;
@@ -96,6 +111,8 @@
   position: relative;
   overflow: hidden;
   transform: transform 0.3s var(--easing);
+  aspect-ratio: 9/16;
+  width: 100%;
 
   & > div {
     position: absolute;
@@ -118,9 +135,16 @@
 
   & img {
     transition: transform 0.3s var(--easing);
+    height: 100%;
+    width: 100%;
 
     &:hover {
       transform: scale(1.05);
     }
   }
+}
+
+.img {
+  aspect-ratio: 9/16;
+  width: 100%;
 }
