--- a/next/src/global/global.scss
+++ b/next/src/global/global.scss
@@ -316,3 +316,14 @@ h2,
     display: none;
   }
 }
+
+.video {
+  width: 100%;
+  overflow: hidden;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  iframe {
+  }
+}
