--- a/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
+++ b/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
@@ -43,7 +43,7 @@
   .loader {
     position: absolute;
     top: 0;
-    left: 0;
+    left: -10%;
     width: 120%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.7);
