feat: back to image

--- a/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
+++ b/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
@@ -93,9 +93,9 @@
     }
   }
 
-  // @media (max-width: 899px) {
-  //   display: none;
-  // }
+  @media (max-width: 899px) {
+    display: none;
+  }
 }
 
 .paragraph {
