--- a/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
+++ b/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
@@ -51,15 +51,17 @@
     z-index: -25;
     min-height: 183px;
     object-position: top;
+    transition:
+      opacity 0.5s var(--easing),
+      filter 0.5s var(--easing);
 
     @media (max-width: 1023px) {
       height: clamp(183px, calc(391vw / 7.68), 791px);
     }
 
-    @media (min-width: 900px) {
-      &[data-video='true'] {
-        display: none;
-      }
+    &[data-video='true'] {
+      opacity: 0;
+      filter: blur(10px);
     }
   }
 }
@@ -72,7 +74,8 @@
   height: 100%;
   pointer-events: none;
   overflow: hidden;
-  z-index: -25;
+  z-index: -30;
+  // display: none;
 
   iframe {
     width: 100vw;
@@ -83,6 +86,10 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+  }
+
+  &[data-loaded='false'] {
+    display: none;
   }
 
   @media (max-width: 1023px) {
