--- a/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
+++ b/next/src/components/ui/OpenVideoBox/OpenVideoBox.module.scss
@@ -28,9 +28,9 @@
 
     iframe {
       width: 100%;
-      height: 177.8%; /* Given a 16:9 aspect ratio, 9/16*100 = 56.25 */
+      height: 177.8%;
       min-height: 100%;
-      min-width: 56.25%; /* Given a 16:9 aspect ratio, 16/9*100 = 177.77 */
+      min-width: 56.25%;
       position: absolute;
       top: 50%;
       left: 50%;
