--- a/next/src/components/ui/Button/Button.module.scss
+++ b/next/src/components/ui/Button/Button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  border: 1px solid var(--secondary-500, #f2ff42);
+  border: 1px solid var(--secondary-500, #1e87c1);
   text-transform: uppercase;
   padding: 10px 16px;
   display: inline-flex;
