--- a/next/src/global/global.scss
+++ b/next/src/global/global.scss
@@ -11,8 +11,9 @@
 
   --secondary-100: #c3d5e2;
   --secondary-300: #69a5c6;
-  --secondary-500: #1e87c1;
-  --secondary-700: #1e72a0;
+  --secondary-500: #f2f142;
+  --secondary-700: #f2f142;
+  ;
 
   --accent-100: #9ea9b0;
   --accent-200: #3c454f;
