Zmieniono kolor nagłówka HeroHeader na secondary-500

--- a/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
+++ b/next/src/components/global/HeroHeaderAndImage/HeroHeaderAndImage.module.scss
@@ -110,3 +110,11 @@
   max-width: 587px;
   margin-bottom: clamp(36px, calc(80vw / 7.68), 80px);
 }
+
+.section h1 {
+  color: var(--secondary-500, #f7f214) !important;
+}
+.HeroHeaderAndImage_section__B51Vr h1 {
+  color: var(--secondary-500, #f7f214) !important;
+}
+
